<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reed136.tutorme.AddActivity" >

    <LinearLayout
        android:id="@+id/layout_labels"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label" />
        
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="textPersonName" />
        
        <TextView
            android:id="@+id/year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_label" />
        
        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
                
        <TextView
            android:id="@+id/major_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_label" />
        
        <EditText
            android:id="@+id/major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />
                
        <TextView
            android:id="@+id/number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_label" />
        
        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="numberSigned"/>
                
        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label" />
        
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="50" />
                
        <TextView
            android:id="@+id/subject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_label" />
        
        <Spinner
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
                
        <TextView
            android:id="@+id/course_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_label" />
        
        <Spinner
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_labels"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/add_button"
        android:onClick="addTutor" />
    
    <TextView
        android:id="@+id/add_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_button"
        android:text="@string/buffer"
        android:visibility="invisible" />

</RelativeLayout>
