<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reed136.tutorme.ListActivity" >

    <LinearLayout 
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal">
        "
    	<Spinner
        	android:id="@+id/subject_spinner"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
    
    	<Spinner
	        android:id="@+id/course_spinner"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/buffer1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/spinner_layout"
        android:text="@string/buffer" 
        android:visibility="invisible"/>
    
    <RadioGroup
        android:id="@+id/search_group" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buffer1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:checkedButton="@+id/search_all">
        <RadioButton
            android:id="@+id/search_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_all"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/search_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_subject"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/search_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_course"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>
    
    <TextView 
        android:id="@+id/buffer2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/search_group"
        android:text="@string/buffer"
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buffer2"
        android:layout_centerHorizontal="true"
        android:onClick="runSQLConnection"
        android:text="@string/search_button" />
    
    <TextView
        android:id="@+id/buffer3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/search_button"
        android:text="@string/buffer"
        android:visibility="invisible" />
    
    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buffer3"
        android:fillViewport="true" >
        <LinearLayout
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</RelativeLayout>
